<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/activity_main"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/zero_horizontal_margin"
        android:paddingRight="@dimen/zero_horizontal_margin"
        android:paddingTop="@dimen/zero_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:context="com.example.android.Photo Quiz.MainActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/photo_head"
            android:scaleType="centerCrop"
            android:alpha="0.8"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin">
            <TextView
                style="@style/HeaderTextStyle2"
                android:text="@string/hello"
                android:paddingTop="@dimen/activity_vertical_margin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Normal"
                android:text="@string/hello2"
                />
            <EditText
                style="@style/EditTextStyle"
                android:id="@+id/name_input"
                android:hint="@string/name"/>
       <TextView
           style="@style/HeaderTextStyle"
           android:layout_marginTop="@dimen/activity_vertical_margin"
           android:layout_marginLeft="@dimen/activity_horizontal_margin"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:text="@string/q1"
           android:layout_marginBottom="@dimen/bottom_margin" />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rg1">
        <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bq1a1"
        android:paddingLeft="24dp"
        android:textSize="16sp"
        android:layout_marginBottom="@dimen/bottom_margin"
            android:text="@string/q1a1"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bq1a2"
                android:paddingLeft="24dp"
                android:textSize="16sp"
                android:layout_marginBottom="@dimen/bottom_margin"
                android:text="@string/q1a2"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bq1a3"
                android:paddingLeft="24dp"
                android:textSize="16sp"
                android:layout_marginBottom="@dimen/bottom_margin"
                android:text="@string/q1a3"/>
            </RadioGroup>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:src="@mipmap/cmos"
            android:scaleType="centerCrop"
            android:alpha="0.7"
            android:layout_alignParentRight="true"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin">
            <TextView
                style="@style/HeaderTextStyle"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/q2"
                android:layout_marginBottom="@dimen/bottom_margin" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bq2a1"
                android:paddingLeft="24dp"
                android:textSize="16sp"
                android:layout_marginBottom="@dimen/bottom_margin"
                android:text="@string/q2a1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bq2a2"
                android:paddingLeft="24dp"
                android:textSize="16sp"
                android:layout_marginBottom="@dimen/bottom_margin"
                android:text="@string/q2a2"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bq2a3"
                android:paddingLeft="24dp"
                android:textSize="16sp"
                android:layout_marginBottom="@dimen/bottom_margin"
                android:text="@string/q2a3"/>
        </RadioGroup>
            </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:src="@mipmap/helios"
                    android:scaleType="centerCrop"
                    android:alpha="1"
                    android:layout_alignParentRight="true"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin">

            <TextView
                style="@style/HeaderTextStyle"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/q3"
                android:layout_marginBottom="@dimen/bottom_margin"
                android:id="@+id/textView2" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bq3a1"
                android:paddingLeft="24dp"
                android:textSize="16sp"
                android:layout_marginBottom="@dimen/bottom_margin"
                android:text="@string/q3a1"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q3a2"
                android:paddingLeft="24dp"
                android:textSize="16sp"
                android:layout_marginBottom="@dimen/bottom_margin"
                android:text="@string/q3a2"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bq3a3"
                android:paddingLeft="24dp"
                android:textSize="16sp"
                android:layout_marginBottom="@dimen/bottom_margin"
                android:text="@string/q3a3"/>

        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:src="@mipmap/palette"
            android:scaleType="centerCrop"
            android:alpha="0.7"
            android:layout_alignParentRight="true"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin">
            <TextView
                style="@style/HeaderTextStyle"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/q4"
                android:layout_marginBottom="@dimen/bottom_margin" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:id="@+id/baq4"
                android:textSize="16sp"
                android:layout_marginBottom="@dimen/bottom_margin"
                android:hint="@string/q4a1"
                />
        </LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center_horizontal">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textAllCaps="true"
        android:onClick="displayFinalResult"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:textAllCaps="true"
        android:onClick="resetResults"/>
</LinearLayout>
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:id="@+id/order_summary_text_view"-->
            <!--android:textColor="#000000"-->
            <!--android:text="$5,00"-->
            <!--android:layout_marginBottom="16dp"/>-->

    </LinearLayout>
</ScrollView>